code/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> top_level_declarations
Rule 2     top_level_declarations -> top_level_declaration top_level_declarations
Rule 3     top_level_declarations -> top_level_declaration
Rule 4     top_level_declaration -> create_variable SEMICOLON
Rule 5     top_level_declaration -> function
Rule 6     create_variable -> MUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
Rule 7     create_variable -> IMMUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
Rule 8     assign -> ID COLON_EQUALS expression
Rule 9     assign -> index COLON_EQUALS expression
Rule 10    function -> FUNCTION ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
Rule 11    function -> FUNCTION ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON
Rule 12    parameter_list -> parameter COMMA parameter_list
Rule 13    parameter_list -> parameter
Rule 14    parameter_list -> <empty>
Rule 15    parameter -> MUTABLE_VARIABLE ID COLON type
Rule 16    parameter -> IMMUTABLE_VARIABLE ID COLON type
Rule 17    block -> statement block
Rule 18    block -> statement
Rule 19    statement -> if_statement
Rule 20    statement -> while_statement
Rule 21    statement -> assign SEMICOLON
Rule 22    statement -> create_variable SEMICOLON
Rule 23    statement -> function_call SEMICOLON
Rule 24    statement -> function
Rule 25    if_statement -> IF expression L_BRACKET block R_BRACKET
Rule 26    if_statement -> IF expression L_BRACKET block R_BRACKET else_if_statements
Rule 27    if_statement -> IF expression L_BRACKET block R_BRACKET ELSE L_BRACKET block R_BRACKET
Rule 28    else_if_statements -> ELSE IF expression L_BRACKET block R_BRACKET
Rule 29    else_if_statements -> ELSE IF expression L_BRACKET block R_BRACKET else_if_statements
Rule 30    else_if_statements -> ELSE IF expression L_BRACKET block R_BRACKET ELSE L_BRACKET block R_BRACKET
Rule 31    while_statement -> WHILE expression L_BRACKET block R_BRACKET
Rule 32    expression -> expression MULTIPLY expression
Rule 33    expression -> expression DIVIDE expression
Rule 34    expression -> expression MOD expression
Rule 35    expression -> expression POWER expression
Rule 36    expression -> expression PLUS expression
Rule 37    expression -> expression MINUS expression
Rule 38    expression -> expression LESS expression
Rule 39    expression -> expression GREATER expression
Rule 40    expression -> expression GREATER_EQUAL expression
Rule 41    expression -> expression LESS_EQUAL expression
Rule 42    expression -> expression EQUALS expression
Rule 43    expression -> expression DIFFERENT expression
Rule 44    expression -> expression AND expression
Rule 45    expression -> expression OR expression
Rule 46    expression -> L_PAREN expression R_PAREN
Rule 47    expression -> value
Rule 48    expression -> MINUS expression
Rule 49    expression -> NOT expression
Rule 50    type -> type_int
Rule 51    type -> type_string
Rule 52    type -> type_boolean
Rule 53    type -> type_char
Rule 54    type -> type_float
Rule 55    type -> type_void
Rule 56    type -> type_array
Rule 57    type_int -> INT
Rule 58    type_string -> STRING
Rule 59    type_boolean -> BOOLEAN
Rule 60    type_char -> CHAR
Rule 61    type_float -> FLOAT
Rule 62    type_void -> VOID
Rule 63    type_array -> L_S_BRACKET type R_S_BRACKET
Rule 64    value -> literal_int
Rule 65    value -> literal_string
Rule 66    value -> literal_boolean
Rule 67    value -> literal_char
Rule 68    value -> literal_float
Rule 69    value -> identifier
Rule 70    value -> function_call
Rule 71    value -> index
Rule 72    value -> array
Rule 73    literal_int -> INT_LITERAL
Rule 74    literal_string -> STRING_LITERAL
Rule 75    literal_boolean -> BOOLEAN_LITERAL
Rule 76    literal_char -> CHAR_LITERAL
Rule 77    literal_float -> FLOAT_LITERAL
Rule 78    identifier -> ID
Rule 79    index -> ID temp
Rule 80    temp -> L_S_BRACKET expression R_S_BRACKET temp
Rule 81    temp -> L_S_BRACKET expression R_S_BRACKET
Rule 82    array -> L_BRACKET array_literal R_BRACKET
Rule 83    array -> L_BRACKET R_BRACKET
Rule 84    array_literal -> expression COMMA array_literal
Rule 85    array_literal -> expression
Rule 86    function_call -> ID L_PAREN arguments_list R_PAREN
Rule 87    arguments_list -> expression COMMA arguments_list
Rule 88    arguments_list -> expression
Rule 89    arguments_list -> <empty>

Terminals, with rules where they appear

AND                  : 44
BOOLEAN              : 59
BOOLEAN_LITERAL      : 75
CHAR                 : 60
CHAR_LITERAL         : 76
COLON                : 6 7 10 11 15 16
COLON_EQUALS         : 6 7 8 9
COMMA                : 12 84 87
DIFFERENT            : 43
DIVIDE               : 33
ELSE                 : 27 28 29 30 30
EQUALS               : 42
FLOAT                : 61
FLOAT_LITERAL        : 77
FUNCTION             : 10 11
GREATER              : 39
GREATER_EQUAL        : 40
ID                   : 6 7 8 10 11 15 16 78 79 86
IF                   : 25 26 27 28 29 30
IMMUTABLE_VARIABLE   : 7 16
INT                  : 57
INT_LITERAL          : 73
LESS                 : 38
LESS_EQUAL           : 41
L_BRACKET            : 10 25 26 27 27 28 29 30 30 31 82 83
L_PAREN              : 10 11 46 86
L_S_BRACKET          : 63 80 81
MINUS                : 37 48
MOD                  : 34
MULTIPLY             : 32
MUTABLE_VARIABLE     : 6 15
NOT                  : 49
OR                   : 45
PLUS                 : 36
POWER                : 35
R_BRACKET            : 10 25 26 27 27 28 29 30 30 31 82 83
R_PAREN              : 10 11 46 86
R_S_BRACKET          : 63 80 81
SEMICOLON            : 4 11 21 22 23
STRING               : 58
STRING_LITERAL       : 74
VOID                 : 62
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

arguments_list       : 86 87
array                : 72
array_literal        : 82 84
assign               : 21
block                : 10 17 25 26 27 27 28 29 30 30 31
create_variable      : 4 22
else_if_statements   : 26 29
expression           : 6 7 8 9 25 26 27 28 29 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 48 49 80 81 84 85 87 88
function             : 5 24
function_call        : 23 70
identifier           : 69
if_statement         : 19
index                : 9 71
literal_boolean      : 66
literal_char         : 67
literal_float        : 68
literal_int          : 64
literal_string       : 65
parameter            : 12 13
parameter_list       : 10 11 12
start                : 0
statement            : 17 18
temp                 : 79 80
top_level_declaration : 2 3
top_level_declarations : 1 2
type                 : 6 7 10 11 15 16 63
type_array           : 56
type_boolean         : 52
type_char            : 53
type_float           : 54
type_int             : 50
type_string          : 51
type_void            : 55
value                : 47
while_statement      : 20

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . top_level_declarations
    (2) top_level_declarations -> . top_level_declaration top_level_declarations
    (3) top_level_declarations -> . top_level_declaration
    (4) top_level_declaration -> . create_variable SEMICOLON
    (5) top_level_declaration -> . function
    (6) create_variable -> . MUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (7) create_variable -> . IMMUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (10) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    MUTABLE_VARIABLE shift and go to state 6
    IMMUTABLE_VARIABLE shift and go to state 7
    FUNCTION        shift and go to state 8

    start                          shift and go to state 1
    top_level_declarations         shift and go to state 2
    top_level_declaration          shift and go to state 3
    create_variable                shift and go to state 4
    function                       shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (1) start -> top_level_declarations .

    $end            reduce using rule 1 (start -> top_level_declarations .)


state 3

    (2) top_level_declarations -> top_level_declaration . top_level_declarations
    (3) top_level_declarations -> top_level_declaration .
    (2) top_level_declarations -> . top_level_declaration top_level_declarations
    (3) top_level_declarations -> . top_level_declaration
    (4) top_level_declaration -> . create_variable SEMICOLON
    (5) top_level_declaration -> . function
    (6) create_variable -> . MUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (7) create_variable -> . IMMUTABLE_VARIABLE ID COLON type COLON_EQUALS expression
    (10) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> . FUNCTION ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    $end            reduce using rule 3 (top_level_declarations -> top_level_declaration .)
    MUTABLE_VARIABLE shift and go to state 6
    IMMUTABLE_VARIABLE shift and go to state 7
    FUNCTION        shift and go to state 8

    top_level_declaration          shift and go to state 3
    top_level_declarations         shift and go to state 9
    create_variable                shift and go to state 4
    function                       shift and go to state 5

state 4

    (4) top_level_declaration -> create_variable . SEMICOLON

    SEMICOLON       shift and go to state 10


state 5

    (5) top_level_declaration -> function .

    MUTABLE_VARIABLE reduce using rule 5 (top_level_declaration -> function .)
    IMMUTABLE_VARIABLE reduce using rule 5 (top_level_declaration -> function .)
    FUNCTION        reduce using rule 5 (top_level_declaration -> function .)
    $end            reduce using rule 5 (top_level_declaration -> function .)


state 6

    (6) create_variable -> MUTABLE_VARIABLE . ID COLON type COLON_EQUALS expression

    ID              shift and go to state 11


state 7

    (7) create_variable -> IMMUTABLE_VARIABLE . ID COLON type COLON_EQUALS expression

    ID              shift and go to state 12


state 8

    (10) function -> FUNCTION . ID L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> FUNCTION . ID L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    ID              shift and go to state 13


state 9

    (2) top_level_declarations -> top_level_declaration top_level_declarations .

    $end            reduce using rule 2 (top_level_declarations -> top_level_declaration top_level_declarations .)


state 10

    (4) top_level_declaration -> create_variable SEMICOLON .

    MUTABLE_VARIABLE reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    IMMUTABLE_VARIABLE reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    FUNCTION        reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)
    $end            reduce using rule 4 (top_level_declaration -> create_variable SEMICOLON .)


state 11

    (6) create_variable -> MUTABLE_VARIABLE ID . COLON type COLON_EQUALS expression

    COLON           shift and go to state 14


state 12

    (7) create_variable -> IMMUTABLE_VARIABLE ID . COLON type COLON_EQUALS expression

    COLON           shift and go to state 15


state 13

    (10) function -> FUNCTION ID . L_PAREN parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> FUNCTION ID . L_PAREN parameter_list R_PAREN COLON type SEMICOLON

    L_PAREN         shift and go to state 16


state 14

    (6) create_variable -> MUTABLE_VARIABLE ID COLON . type COLON_EQUALS expression
    (50) type -> . type_int
    (51) type -> . type_string
    (52) type -> . type_boolean
    (53) type -> . type_char
    (54) type -> . type_float
    (55) type -> . type_void
    (56) type -> . type_array
    (57) type_int -> . INT
    (58) type_string -> . STRING
    (59) type_boolean -> . BOOLEAN
    (60) type_char -> . CHAR
    (61) type_float -> . FLOAT
    (62) type_void -> . VOID
    (63) type_array -> . L_S_BRACKET type R_S_BRACKET

    INT             shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    CHAR            shift and go to state 28
    FLOAT           shift and go to state 29
    VOID            shift and go to state 30
    L_S_BRACKET     shift and go to state 31

    type                           shift and go to state 17
    type_int                       shift and go to state 18
    type_string                    shift and go to state 19
    type_boolean                   shift and go to state 20
    type_char                      shift and go to state 21
    type_float                     shift and go to state 22
    type_void                      shift and go to state 23
    type_array                     shift and go to state 24

state 15

    (7) create_variable -> IMMUTABLE_VARIABLE ID COLON . type COLON_EQUALS expression
    (50) type -> . type_int
    (51) type -> . type_string
    (52) type -> . type_boolean
    (53) type -> . type_char
    (54) type -> . type_float
    (55) type -> . type_void
    (56) type -> . type_array
    (57) type_int -> . INT
    (58) type_string -> . STRING
    (59) type_boolean -> . BOOLEAN
    (60) type_char -> . CHAR
    (61) type_float -> . FLOAT
    (62) type_void -> . VOID
    (63) type_array -> . L_S_BRACKET type R_S_BRACKET

    INT             shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    CHAR            shift and go to state 28
    FLOAT           shift and go to state 29
    VOID            shift and go to state 30
    L_S_BRACKET     shift and go to state 31

    type                           shift and go to state 32
    type_int                       shift and go to state 18
    type_string                    shift and go to state 19
    type_boolean                   shift and go to state 20
    type_char                      shift and go to state 21
    type_float                     shift and go to state 22
    type_void                      shift and go to state 23
    type_array                     shift and go to state 24

state 16

    (10) function -> FUNCTION ID L_PAREN . parameter_list R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> FUNCTION ID L_PAREN . parameter_list R_PAREN COLON type SEMICOLON
    (12) parameter_list -> . parameter COMMA parameter_list
    (13) parameter_list -> . parameter
    (14) parameter_list -> .
    (15) parameter -> . MUTABLE_VARIABLE ID COLON type
    (16) parameter -> . IMMUTABLE_VARIABLE ID COLON type

    R_PAREN         reduce using rule 14 (parameter_list -> .)
    MUTABLE_VARIABLE shift and go to state 35
    IMMUTABLE_VARIABLE shift and go to state 36

    parameter_list                 shift and go to state 33
    parameter                      shift and go to state 34

state 17

    (6) create_variable -> MUTABLE_VARIABLE ID COLON type . COLON_EQUALS expression

    COLON_EQUALS    shift and go to state 37


state 18

    (50) type -> type_int .

    COLON_EQUALS    reduce using rule 50 (type -> type_int .)
    R_S_BRACKET     reduce using rule 50 (type -> type_int .)
    L_BRACKET       reduce using rule 50 (type -> type_int .)
    SEMICOLON       reduce using rule 50 (type -> type_int .)
    COMMA           reduce using rule 50 (type -> type_int .)
    R_PAREN         reduce using rule 50 (type -> type_int .)


state 19

    (51) type -> type_string .

    COLON_EQUALS    reduce using rule 51 (type -> type_string .)
    R_S_BRACKET     reduce using rule 51 (type -> type_string .)
    L_BRACKET       reduce using rule 51 (type -> type_string .)
    SEMICOLON       reduce using rule 51 (type -> type_string .)
    COMMA           reduce using rule 51 (type -> type_string .)
    R_PAREN         reduce using rule 51 (type -> type_string .)


state 20

    (52) type -> type_boolean .

    COLON_EQUALS    reduce using rule 52 (type -> type_boolean .)
    R_S_BRACKET     reduce using rule 52 (type -> type_boolean .)
    L_BRACKET       reduce using rule 52 (type -> type_boolean .)
    SEMICOLON       reduce using rule 52 (type -> type_boolean .)
    COMMA           reduce using rule 52 (type -> type_boolean .)
    R_PAREN         reduce using rule 52 (type -> type_boolean .)


state 21

    (53) type -> type_char .

    COLON_EQUALS    reduce using rule 53 (type -> type_char .)
    R_S_BRACKET     reduce using rule 53 (type -> type_char .)
    L_BRACKET       reduce using rule 53 (type -> type_char .)
    SEMICOLON       reduce using rule 53 (type -> type_char .)
    COMMA           reduce using rule 53 (type -> type_char .)
    R_PAREN         reduce using rule 53 (type -> type_char .)


state 22

    (54) type -> type_float .

    COLON_EQUALS    reduce using rule 54 (type -> type_float .)
    R_S_BRACKET     reduce using rule 54 (type -> type_float .)
    L_BRACKET       reduce using rule 54 (type -> type_float .)
    SEMICOLON       reduce using rule 54 (type -> type_float .)
    COMMA           reduce using rule 54 (type -> type_float .)
    R_PAREN         reduce using rule 54 (type -> type_float .)


state 23

    (55) type -> type_void .

    COLON_EQUALS    reduce using rule 55 (type -> type_void .)
    R_S_BRACKET     reduce using rule 55 (type -> type_void .)
    L_BRACKET       reduce using rule 55 (type -> type_void .)
    SEMICOLON       reduce using rule 55 (type -> type_void .)
    COMMA           reduce using rule 55 (type -> type_void .)
    R_PAREN         reduce using rule 55 (type -> type_void .)


state 24

    (56) type -> type_array .

    COLON_EQUALS    reduce using rule 56 (type -> type_array .)
    R_S_BRACKET     reduce using rule 56 (type -> type_array .)
    L_BRACKET       reduce using rule 56 (type -> type_array .)
    SEMICOLON       reduce using rule 56 (type -> type_array .)
    COMMA           reduce using rule 56 (type -> type_array .)
    R_PAREN         reduce using rule 56 (type -> type_array .)


state 25

    (57) type_int -> INT .

    COLON_EQUALS    reduce using rule 57 (type_int -> INT .)
    R_S_BRACKET     reduce using rule 57 (type_int -> INT .)
    L_BRACKET       reduce using rule 57 (type_int -> INT .)
    SEMICOLON       reduce using rule 57 (type_int -> INT .)
    COMMA           reduce using rule 57 (type_int -> INT .)
    R_PAREN         reduce using rule 57 (type_int -> INT .)


state 26

    (58) type_string -> STRING .

    COLON_EQUALS    reduce using rule 58 (type_string -> STRING .)
    R_S_BRACKET     reduce using rule 58 (type_string -> STRING .)
    L_BRACKET       reduce using rule 58 (type_string -> STRING .)
    SEMICOLON       reduce using rule 58 (type_string -> STRING .)
    COMMA           reduce using rule 58 (type_string -> STRING .)
    R_PAREN         reduce using rule 58 (type_string -> STRING .)


state 27

    (59) type_boolean -> BOOLEAN .

    COLON_EQUALS    reduce using rule 59 (type_boolean -> BOOLEAN .)
    R_S_BRACKET     reduce using rule 59 (type_boolean -> BOOLEAN .)
    L_BRACKET       reduce using rule 59 (type_boolean -> BOOLEAN .)
    SEMICOLON       reduce using rule 59 (type_boolean -> BOOLEAN .)
    COMMA           reduce using rule 59 (type_boolean -> BOOLEAN .)
    R_PAREN         reduce using rule 59 (type_boolean -> BOOLEAN .)


state 28

    (60) type_char -> CHAR .

    COLON_EQUALS    reduce using rule 60 (type_char -> CHAR .)
    R_S_BRACKET     reduce using rule 60 (type_char -> CHAR .)
    L_BRACKET       reduce using rule 60 (type_char -> CHAR .)
    SEMICOLON       reduce using rule 60 (type_char -> CHAR .)
    COMMA           reduce using rule 60 (type_char -> CHAR .)
    R_PAREN         reduce using rule 60 (type_char -> CHAR .)


state 29

    (61) type_float -> FLOAT .

    COLON_EQUALS    reduce using rule 61 (type_float -> FLOAT .)
    R_S_BRACKET     reduce using rule 61 (type_float -> FLOAT .)
    L_BRACKET       reduce using rule 61 (type_float -> FLOAT .)
    SEMICOLON       reduce using rule 61 (type_float -> FLOAT .)
    COMMA           reduce using rule 61 (type_float -> FLOAT .)
    R_PAREN         reduce using rule 61 (type_float -> FLOAT .)


state 30

    (62) type_void -> VOID .

    COLON_EQUALS    reduce using rule 62 (type_void -> VOID .)
    R_S_BRACKET     reduce using rule 62 (type_void -> VOID .)
    L_BRACKET       reduce using rule 62 (type_void -> VOID .)
    SEMICOLON       reduce using rule 62 (type_void -> VOID .)
    COMMA           reduce using rule 62 (type_void -> VOID .)
    R_PAREN         reduce using rule 62 (type_void -> VOID .)


state 31

    (63) type_array -> L_S_BRACKET . type R_S_BRACKET
    (50) type -> . type_int
    (51) type -> . type_string
    (52) type -> . type_boolean
    (53) type -> . type_char
    (54) type -> . type_float
    (55) type -> . type_void
    (56) type -> . type_array
    (57) type_int -> . INT
    (58) type_string -> . STRING
    (59) type_boolean -> . BOOLEAN
    (60) type_char -> . CHAR
    (61) type_float -> . FLOAT
    (62) type_void -> . VOID
    (63) type_array -> . L_S_BRACKET type R_S_BRACKET

    INT             shift and go to state 25
    STRING          shift and go to state 26
    BOOLEAN         shift and go to state 27
    CHAR            shift and go to state 28
    FLOAT           shift and go to state 29
    VOID            shift and go to state 30
    L_S_BRACKET     shift and go to state 31

    type                           shift and go to state 38
    type_int                       shift and go to state 18
    type_string                    shift and go to state 19
    type_boolean                   shift and go to state 20
    type_char                      shift and go to state 21
    type_float                     shift and go to state 22
    type_void                      shift and go to state 23
    type_array                     shift and go to state 24

state 32

    (7) create_variable -> IMMUTABLE_VARIABLE ID COLON type . COLON_EQUALS expression

    COLON_EQUALS    shift and go to state 39


state 33

    (10) function -> FUNCTION ID L_PAREN parameter_list . R_PAREN COLON type L_BRACKET block R_BRACKET
    (11) function -> FUNCTION ID L_PAREN parameter_list . R_PAREN COLON type SEMICOLON

    R_PAREN         shift and go to state 40


state 34

    (12) parameter_list -> parameter . COMMA parameter_list
    (13) parameter_list -> parameter .

    COMMA           shift and go to state 41
    R_PAREN         reduce using rule 13 (parameter_list -> parameter .)


state 35

    (15) parameter -> MUTABLE_VARIABLE . ID COLON type

    ID              shift and go to state 42


state 36

    (16) parameter -> IMMUTABLE_VARIABLE . ID COLON type

    ID              shift and go to state 43


state 37
